@@ -323,10 +323,6 @@
       "platform": "mac-bigsur"
     },
     {
-      "name": "ews179",
-      "platform": "mac-bigsur"
-    },
-    {
       "name": "ews180",
       "platform": "mac-bigsur"
     },
@@ -464,7 +460,7 @@
       "configuration": "debug",
       "architectures": ["arm64"],
       "triggered_by": ["macos-applesilicon-big-sur-debug-build-ews"],
-      "workernames": [ "ews173", "ews174", "ews175", "ews176", "ews177", "ews178", "ews179", "ews180"]
+      "workernames": [ "ews173", "ews174", "ews175", "ews176", "ews177", "ews178", "ews180"]
     },
     {
       "name": "macOS-Catalina-Release-Build-EWS",
